# manim_editor

./: .clang-format  .gitignore  .pep8  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  example.py  index.html  logo_and_banner.ipynb  package-lock.json  package.json  project.json  pyproject.toml  tsconfig.json  webpack.config.js
.github/workflows/: build_pages.yml  ci.yml
MinimalPresentationExample/: index.html  project.json
MinimalPresentationExample/webpack/: base.css  base.js  edit_project.js  scene_selection.js
Tutorial/: index.html  project.json
Tutorial/webpack/: base.css  edit_project.js
docs/: requirements.txt
docs/source/: ch1.rst  ch2.md  conf.py  index.rst  installation.rst  internals.rst  presentation.rst  use.rst
docs/source/use/: cli.rst  create_project.rst  create_scene.rst  export_presentation.rst  presentation.rst  video_editing.rst
manim_editor/: __init__.py  __main__.py  config.py  project.schema.json  section_index.schema.json
manim_editor/app/: __init__.py
manim_editor/app/editor/: __init__.py  loader.py  section.py
manim_editor/app/error/: __init__.py  handlers.py
manim_editor/app/error/templates/: 400.html  401.html  404.html  418.html  500.html
manim_editor/app/main/: __init__.py  routes.py
manim_editor/app/main/templates/: edit_project.html  index.html  project_selection.html  scene_selection.html  section_selection.html  set_project_name.html  test.html
manim_editor/app/static/webpack/: base.css  edit_project.js  section_selection.js
manim_editor/app/templates/: base.html
manim_editor/editor/: __init__.py  assets.py  commands.py  config.py  create_project.py  edit_project.py  load_project.py  loader.py  manim_assets.py  manim_loader.py  presentation_classes.py  project.py  scene.py  section.py  utils.py
media/Tex/: 6f25f4dafcf3ce9b.tex  6f25f4dafcf3ce9b.xdv  82d27d84fcf1269b.tex  82d27d84fcf1269b.xdv  d542770d69a4bbe7.aux  d542770d69a4bbe7.dvi  d542770d69a4bbe7.tex  e2c85f819f1e5e13.tex  e2c85f819f1e5e13.xdv  ec5652bc7bb0b859.dvi  ec5652bc7bb0b859.tex  fa706abefbf19fe6.tex  fa706abefbf19fe6.xdv
media/videos/example/1080p60/partial_movie_files/ElaborateSceneWithSections/: partial_movie_file_list.txt
media/videos/example/1080p60/partial_movie_files/Test/: partial_movie_file_list.txt
media/videos/example/1080p60/partial_movie_files/Tutorial/: partial_movie_file_list.txt
media/videos/example/1080p60/sections/: ElaborateSceneWithSections.json  Test.json  Tutorial.json
media/videos/example/480p15/partial_movie_files/ElaborateSceneWithSections/: partial_movie_file_list.txt
media/videos/example/480p15/sections/: ElaborateSceneWithSections.json  Test.json
test/: project.json
test/webpack/: section_selection.js
test2/: project.json
tutorial/: index.html  project.json
tutorial/webpack/: edit_project.js
web_src/scss/: base.scss
web_src/ts/: base.ts  edit_project.ts  index.ts  scene_selection.ts  section_selection.ts  utils.ts
web_src/ts/buffer_presenter/: buffer_presentation.ts  buffer_section.ts
web_src/ts/fallback_presenter/: fallback_presentation.ts  fallback_section.ts
web_src/ts/presenter/: presentation.ts  section.ts
webpack/: base.css  edit_project.js  package-lock.json  package.json
webpack/src/scss/: app.scss
webpack/src/ts/: index.ts
(+1 files in other folders)
