[tool.poetry]
name = "manim_editor"
version = "0.2.4"
description = "Editor and Presenter for Manim Generated Content"
authors = ["christopher-besch <christopher.besch@gmx.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ManimEditorProject/manim_editor"
documentation = "https://manim-editor.readthedocs.io"
include = [
    "manim_editor/app/static/webpack/*"
]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.0.2"
click = "^8.0.3"
# TODO: uncomment once released
# manim = "^0.12.0"
waitress = "^2.0.0"
jsonschema = "^4.1.2"

[tool.poetry.dev-dependencies]
manim = { git = "https://github.com/ManimCommunity/manim", branch = "main" }
Sphinx = "^4"
myst-parser = "^0.15.2"
furo = "^2021.10.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins]
[tool.poetry.plugins."console_scripts"]
"manedit" = "manim_editor.__main__:main"
"manim_editor" = "manim_editor.__main__:main"
