[tool.poetry]
name = "manim_editor"
version = "0.3.8"
description = "Editor and Presenter for Manim Generated Content."
authors = ["christopher-besch <christopher.besch@gmx.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ManimCommunity/manim_editor"
documentation = "https://docs.editor.manim.community"
include = [
    "manim_editor/app/static/webpack/*"
]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.0.2"
click = "^8.0.3"
manim = "^0.13.1"
waitress = "^2.0.0"
jsonschema = "^4.1.2"

[tool.poetry.dev-dependencies]
Sphinx = "^4"
myst-parser = "^0.15.2"
furo = "^2021.10.9"
pre-commit = "^2.15.0"
black = "^21.10b0"
mypy = "^0.910"
isort = "^5.10.1"
types-waitress = "^2.0.1"
types-jsonschema = "^3.2.1"
codespell = "^2.1.0"

[tool.black]
line-length = 128
target-version = ['py37', 'py38']
include = '(\.py$)'
exclude = '''
/(
    \.git
  | __pycache__
  | \.tox
  | \.venv
  | dist
  | docs
)/
'''

[tool.isort]
profile = "black"
# from https://black.readthedocs.io/en/stable/compatible_configs.html
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 128

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins]
[tool.poetry.plugins."console_scripts"]
"manedit" = "manim_editor.__main__:main"
"manim_editor" = "manim_editor.__main__:main"
